Fix menu alignment when the item has an octicon in it

--- a/components/nav.scss
+++ b/components/nav.scss
@@ -46,6 +46,8 @@
 
     .octicon {
       color: $brand-darkGrey;
+      width: 14px;
+      text-align: center;
     }
 
     &.selected {
